[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

# ---------------------------------------------------------------------------
[project]
name = "rm-pose-solver"
version = "0.1.0"
description = "RoboMaster plate pose solver: yaw optimisation + light-bar refinement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "ty>=0.0.7",
    "opencv-python>=4.9",
]

# ---------------------------------------------------------------------------
[tool.scikit-build]
wheel.packages = ["rm_pose_solver"]
cmake.build-type = "Release"
# Expose the pybind11 cmake dir so CMakeLists.txt can find_package(pybind11)
cmake.args = ["-DCMAKE_BUILD_PARALLEL_LEVEL=4"]

# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]

[tool.ty]
target-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["test_pose_solver.py"]
addopts = ["--strict-markers"]
